--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ header.masthead h1 {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("https://toppng.com/uploads/preview/arizona-wallpaper-11547843751brgzthv59h.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("assets/img/home.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -180,7 +180,7 @@ header.masthead {
 	border-color: lightgray;
 }
 
-#welcome{
+.welcome{
 	text-align: center;
 	font-weight: bold;
 	color: white;
@@ -209,6 +209,7 @@ header.masthead {
 }
 
 footer{
+  margin-top: 2rem;
 	background-color: #45b1d9;
 	color: gray;
 }
@@ -246,17 +247,44 @@ footer{
 
 .headerdiv > h1:hover{
 	transfrom: scale(1.1);
-	background-color: gray;
 }
 
 .paragraphdiv > p{
-	font-size: 2rem;
+	font-size: 1.7em;
 	color: black;
+  padding-bottom: 3rem;
 }
 
 #about{
 	background-color: #45b1d9;
 }
 
+#personalhome{
+  height: 100%;
+  background-color: lightgray;
+}
+
+#personalintro{
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("assets/img/background.jpg");
+}
+
+#personalheader{
+  padding: 5rem;
+  margin-top: -5rem;
+}
+
+b{
+  font-weight: bold;
+}
+
+.customflex{
+  display: flex;
+  justify-content: center;
+}
+
+.card-text{
+  color: black !important;
+  font-weight: bold !important;
+}
 
 
