--- a/styles.css
+++ b/styles.css
@@ -252,7 +252,7 @@ footer{
 .paragraphdiv > p{
 	font-size: 1.2rem;
 	color: black;
-  padding-bottom: 3em;
+  padding-bottom: 3rem;
 }
 
 #about{
@@ -291,7 +291,7 @@ b{
       .paragraphdiv > p{
   font-size: 1rem;
   color: black;
-  padding-bottom: 3em;
+  padding-bottom: 3rem;
 }
     }
 
